[tool.poetry]
name = "portal"
version = "0.1.0"
description = "Informed Governance Portal"
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
black = "^22.3.0"
pyupgrade = "^2.32.0"
reorder-python-imports = "^3.0.1"
flake8 = "^4.0.1"
pip-audit = "^2.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "migrations|docs"
